Se cargan las combinaciones de la compuerta xnor y se crea el modelo de red neuronal

--- a/xnor_gate.ipynb
+++ b/xnor_gate.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d027c04",
+   "id": "85f15422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "69e7f15b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cargamos las 4 combinaciones de las compuertas XNOR\n",
+    "training_data = np.array([[0,0],[0,1],[1,0],[1,1]], \"float32\")\n",
+    " \n",
+    "# y estos son los resultados que se obtienen, en el mismo orden\n",
+    "target_data = np.array([[1],[0],[0],[1]], \"float32\")\n",
+    " \n",
+    "model = Sequential()\n",
+    "model.add(Dense(16, input_dim=2, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2ae157ce",
+   "id": "6fed24e2",
    "metadata": {},
    "outputs": [],
    "source": []
